--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepublishOnly": "cross-env node ./scripts/prepublish.js && yarn tsc"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.9.11",
     "cross-env": "^5.2.0",
@@ -22,6 +23,7 @@
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "react": "^16.12.0",
+    "react-test-renderer": "16.12.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
