--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^5.2.0",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
+    "jest-date-mock": "^1.0.8",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "react": "^16.12.0",
